# Resource-files-Extension

./: .gitignore  README.md  compile_example.sh
Example/: CMakeLists.txt  main.cpp
Example/Resources/: data_2.txt  data_3.txt
Resource files Extension/: CMakeLists.txt
Resource files Extension/include/: resource_files_manager.h
Resource files Extension/src/: resource_files_manager.cpp.template
